Fix dot between items on mobile screen

--- a/_includes/full_css.css
+++ b/_includes/full_css.css
@@ -249,3 +249,7 @@ h1 {
 .page-title {
     color: #bcd1ca;
 }
+
+.mobile-divider {
+    display: none;
+}
